// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/query-bar/components/ColumnButton render should render ColumnButton default state when menu is closed 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;

exports[`features/query-bar/components/ColumnButton render should render ColumnButton default state when menu is open 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <ColumnButtonOverlay
      columns={
        Array [
          Object {
            "displayName": "Expire Date",
            "id": "4",
            "isShown": true,
            "property": "expireDate",
            "source": "metadata",
            "type": "date",
          },
          Object {
            "displayName": "Count",
            "id": "6",
            "isShown": true,
            "property": "count",
            "source": "metadata",
            "type": "float",
          },
        ]
      }
      onColumnChange={[MockFunction]}
    />
  </Overlay>
</Flyout>
`;

exports[`features/query-bar/components/ColumnButton render should render ColumnButton with template passed in 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={false}
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.queryBar.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div />
  </Overlay>
</Flyout>
`;
